fix: make the queue less garbage
I think the arraylist capacity is what is making it use up more memory over time.
Also I don't have to build my own lock, Java let me.